kubernetes/talos/proxies/internal/internal/adguard/endpoint.yaml
kind: Endpoints
apiVersion: v1
metadata:
  name: adguard
subsets:
  - addresses:
      - ip: 192.168.3.1
    ports:
      - port: 88
        name: http
