kubernetes/talos/proxies/internal/internal/adguard/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: adguard
spec:
  ports:
  - protocol: TCP
    port: 88
    name: http
    targetPort: 88
