kubernetes/talos/proxies/internal/internal/adguard/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: internal
  name: adguard
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`adguard.vandeneede.org`)
    services:
    - name: adguard
      port: 88
